src/assets/styles/base/_layout.scss
// Main Site Layout

body {
    overflow-x: hidden;
}

.cornered {
    position: relative;
}
.cornered:before,
.cornered:after,
.cornered > :first-child:before,
.cornered > :first-child:after {
    position: absolute;
    content: ' ';
    width: 80px;
    height: 80px;
    border-color: red; /* or whatever colour */
    border-style: solid; /* or whatever style */
}
.cornered:before {
    top: 0;
    left: 0;
    border-width: 1px 0 0 1px;
}
.cornered:after {
    top: 0;
    right: 0;
    border-width: 1px 1px 0 0;
}
.cornered > :first-child:before {
    bottom: 0;
    right: 0;
    border-width: 0 1px 1px 0;
}
.cornered > :first-child:after {
    bottom: 0;
    left: 0;
    border-width: 0 0 1px 1px;
}

article .content {
    max-width: 900px;
    margin-right: auto;
    margin-left: auto;
}

.logo {
    text-decoration: none;
}

.zellij, .zellij img {
    width: 300px;
    height: 300px;
}

.grid {
    display: grid;
    grid-column-gap: 4em;
    .about {
        margin-bottom: 4em;
    }
    picture,
    img {
        width: 150px;
        height: 150px;
        border-radius: 5em;
    }
    @include mq(lg) {
        grid-template-columns: 1fr 1fr;
        .about {
            margin-bottom: 0;
        }
    }
}

.layout {
    display: flex;
    flex-direction: column;
    min-height: 100%;
    min-height: 100vh;
    position: relative;

    .header,
    .footer {
        flex: none;
    }

    .main {
        display: flex;
        flex-direction: column;
        flex: 1 0 auto;

        &::after {
            content: '';
            display: block;
            height: 0px;
            visibility: hidden;
        }
    }
}

.centered-image {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.container {
    padding-top: 3em;
    padding-bottom: 3em;
    &#top {
        padding-top: 1em;
        padding-bottom: 1em;
        @include mq(lg) {
            padding-top: 3em;
            padding-bottom: 3em;
        }
    }
    padding-left: 10%;
    padding-right: 10%;
    width: 100%;
}

.lg-right {
    @include mq(lg) {
        text-align: right;
    }
}

.mb-1 {
    margin-bottom: 0.25em;
}

.mb-2 {
    margin-bottom: 0.5em;
}

.mb-4 {
    margin-bottom: 1em;
}

.mb-8 {
    margin-bottom: 2em;
}

.hero {
    text-align: center;
    & > *:first-child {
        margin-bottom: 3em;
    }
    @include mq(lg) {
        text-align: left;
        width: 100%;
        display: flex;
        gap: 2em;
        justify-content: space-between;
        & > *:first-child {
            margin-bottom: 0;
            flex: 1;
        }
    }
}

hr {
    border: 0;
    width: 100%;
    border-top: 2px solid $green;
    box-shadow: 0px 0px 10px 1px $active-green;
}

.taglines {
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.alternate {
    text-align: center;
    gap: 2em;
    @include mq(lg) {
        text-align: left;
        width: 100%;
        display: flex;
        justify-content: space-between;
        flex-direction: row-reverse;
        & > *:first-child {
            margin-bottom: 0;
        }
    }

    .taglines {
        margin-bottom: 3em;
        display: flex;
        flex-direction: column;
        justify-content: center;
    }
}
#svg21948 {
    max-width: 400px;
    @include mq(lg) {
        width: 400px;
    }
}

#hero-image,
#svg288364 {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
    @include mq(lg) {
        width: 600px;
    }
}

#svg31004 {
    max-width: 350px;
    min-width: 250px;
    margin-left: auto;
    margin-right: auto;
    @include mq(lg) {
        width: 350px;
    }
}

